# liteconf

./: README.md  pyproject.toml
notebooks/: fixture_walkthrough.ipynb
src/simpleconf/: sources.py
tests/: conftest.py  test_coverage_extras.py  test_loader.py  test_manager.py
tests/fixtures/base/: messaging.yml
tests/fixtures/local/: messaging.yml
tests/fixtures/prod/: messaging.json  messaging.yml
